syntax = "proto3";

package livestack;

// import "google/protobuf/empty.proto"; 

service CacapcityService {
  rpc ReportAsInstance(stream FromInstance) returns (stream CommandToInstance);
}

message ReportSpecAvailability {
  string specName = 3;
  int32 maxCapacity = 4;
}

message FromInstance {
  string projectUuid = 1;
  string instanceId = 2;
  oneof value {
    ReportSpecAvailability reportSpecAvailability = 3;
  }
}

message Provision {
  string projectUuid = 1;
  string specName = 2;
  int32 numberOfWorkersNeeded = 3;
}

message CommandToInstance {
  string projectUuid = 1;
  string instanceId = 2;
  oneof value {
    Provision provision = 3;
  }
}